Feature: Implemetacion completa de cartera